Fixed comments list not showing in admin section.
git-svn-id: svn://svn.zenadmin.org/zena/trunk@796 aaa19a3b-e121-0410-9d45-962fd44e537e

--- a/db/init/base/skins/default/default.css
+++ b/db/init/base/skins/default/default.css
@@ -57,7 +57,7 @@ but we have to use :*/
 #related { position:absolute; top:125px; right:5px; width:215px; padding-left:5px; }
 #context li.on a { color:black; }
 #context li { margin-left:12px; }
-
+#context .admin_links li { margin:0; }
 /* site info */
 #siteinfo { clear:both; }
 
